fixing the spacing on mobile h1 and btn

--- a/style.css
+++ b/style.css
@@ -645,11 +645,11 @@ text-align: center;
 
 h1 {
 	font-size: 3em !important;
-	padding:40px 0px 10px !important;
+	padding:100px 0px 4px !important;
 }
 
 .btn {
-	margin-top: 30px;
+	margin-top: 24px;
 }
 
 .header li {
@@ -690,7 +690,7 @@ h1 {
 	background-attachment: none;
 	background-position: cover;
 	width: 100% !important;
-	height: auto;
+	height: 700px;
 }
 
 .jumbotron, .feature-1, .feature-2, .feature-3, .feature-4, #home, #our-friends, #our-antiques, #our-menu, #our-inspiration  {
